<resources>
    <string name="app_name">first</string>

    //Headings
    <string name="heading_one">A</string>
    <string name="heading_two">B</string>
    <string name="heading_three">C</string>
    <string name="heading_fourth">D</string>
    <string name="heading_5">E</string>
    <string name="heading_6">F</string>
    <string name="heading_7">G</string>
    <string name="heading_8">H</string>
    <string name="heading_9">I</string>
    <string name="heading_10">J</string>
    <string name="heading_11">K</string>
    <string name="heading_12">L</string>
    <string name="heading_13">M</string>
    <string name="heading_14">N</string>
    <string name="heading_15">O</string>
    <string name="heading_16">P</string>
    <string name="heading_17">Q</string>
    <string name="heading_18">R</string>
    <string name="heading_19">S</string>
    <string name="heading_20">T</string>
    <string name="heading_21">U</string>
    <string name="heading_22">V</string>
    <string name="heading_23">W</string>
    <string name="heading_24">X</string>
    <string name="heading_25">Y</string>
    <string name="heading_26">Z</string>
    <string name="heading_a00">0</string>
    <string name="heading_a11">1</string>
    <string name="heading_a22">2</string>
    <string name="heading_a33">3</string>
    <string name="heading_a44">4</string>
    <string name="heading_a55">5</string>
    <string name="heading_a66">6</string>
    <string name="heading_a77">7</string>
    <string name="heading_a88">8</string>
    <string name="heading_a99">9</string>
    <string name="heading_blue">Blue</string>
    <string name="heading_purple">purple</string>
    <string name="heading_red">Red</string>
    <string name="heading_white">White</string>
    <string name="heading_green">Green</string>
    <string name="heading_pink">Pink</string>
    <string name="heading_brown">Brown</string>
    <string name="heading_orange">Orange</string>
    <string name="heading_yellow">Yellow</string>
    <string name="heading_black">Black</string>
    <string name="heading_excited">Excited</string>
    <string name="heading_surprise">Surprise</string>
    <string name="heading_tired">Tired</string>
    <string name="heading_happy">Happy</string>
    <string name="heading_dream">Dream</string>
    <string name="heading_feeling">Feeling</string>
    <string name="heading_sad">Sad</string>
    <string name="heading_good">Good</string>
    <string name="heading_bad">Bad</string>
    <string name="heading_nervous">Nervous</string>
    <string name="heading_bored">Bored</string>
    <string name="heading_grumpy">Grumpy</string>
    <string name="heading_bicycle">Bicycle</string>
    <string name="heading_ship">Ship</string>
    <string name="heading_helicopter">Helicopter</string>
    <string name="heading_Truck">Truck</string>
    <string name="heading_car">Car</string>
    <string name="heading_motorcycle">Motorcycle</string>
    <string name="heading_bus">Bus</string>
    <string name="heading_taxi">Taxi</string>
    <string name="heading_ambulance">Ambulance</string>
    <string name="heading_train">Train</string>
    <string name="heading_scooter">Scooter</string>
    <string name="heading_aeroplan">Aeroplan</string>
    <string name="heading_dog">Dog</string>
    <string name="heading_cat">Cat</string>
    <string name="heading_lion">Lion</string>
    <string name="heading_tiger">Tiger</string>
    <string name="heading_bear">Bear</string>
    <string name="heading_snake">Snake</string>
    <string name="heading_sheep">Sheep</string>
    <string name="heading_zebra">Zebra</string>
    <string name="heading_chicken">Chicken</string>
    <string name="heading_gorilla">Gorilla</string>
    <string name="heading_giraffe">Giraffe</string>
    <string name="heading_elephant">Elephant</string>
    <string name="heading_monkey">Monkey</string>
    <string name="heading_bisom">Bison</string>
    <string name="heading_horse">Horse</string>
    <string name="heading_mouse">Mouse</string>
    <string name="heading_lunch">Lunch</string>
    <string name="heading_dinner">Dinner</string>
    <string name="heading_breakfast">Breakfast</string>
    <string name="heading_apple">Apple</string>
    <string name="heading_egg">Egg</string>
    <string name="heading_peas">Peas</string>
    <string name="heading_cake">Cake</string>
    <string name="heading_pizza">Pizza</string>
    <string name="heading_salad">Salad</string>
    <string name="heading_chocalate">Chocalate</string>
    <string name="heading_juice">Juice</string>
    <string name="heading_cookie">Cookie</string>
    <string name="heading_toast">Toast</string>
    <string name="heading_milk">Milk</string>
    <string name="heading_vegetable">Vegetable</string>
    <string name="heading_onion">Onion</string>
    <string name="heading_potato">Potato</string>
    <string name="heading_tomato">Tomato</string>
    <string name="heading_mushroom">Mushroom</string>
    <string name="heading_pumpkin">Pumpkin</string>
    <string name="heading_corn">Corn</string>
    <string name="heading_carrot">Carrot</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
</resources>