<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="28dp"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary"
            android:textSize="23.40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.20dp"
            android:text="@string/login_to_continue"
            android:textColor="@color/primary"
            android:textSize="15.60sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/SignInEmail"
            android:layout_width="match_parent"
            android:layout_height="58.50dp"
            android:layout_marginTop="52.00dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="20.80dp"
            android:paddingEnd="16.00dp"
            android:textColor="@color/primary_text"
            android:textSize="16.90sp"/>


        <EditText
            android:id="@+id/SignInPass"
            android:layout_width="match_parent"
            android:layout_height="58.50dp"
            android:layout_marginTop="22.00dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16.00sp"
            android:paddingEnd="16.00dp"
            android:textColor="@color/primary_text"
            android:textSize="16.90sp" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32.00dp"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/SignInBtn"
                android:layout_width="match_parent"
                android:layout_height="65.00dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="16.90sp"
                android:textStyle="bold"
                app:cornerRadius="10.40dp"
                />

            <ProgressBar
                android:id="@+id/SignInProgressBar"
                android:layout_width="25.00dp"
                android:layout_height="25.00dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>

        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45.00dp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="16.90sp"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>