<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="54.60dp"
    android:scrollbars="none"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26.00dp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="23.40dp"
            android:textStyle="bold" />

        <!--        <FrameLayout-->
        <!--            android:id="@+id/layoutImage"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="26.00dp">-->

        <!--            <com.makeramen.roundedimageview.RoundedImageView-->
        <!--                android:id="@+id/imageProfile"-->
        <!--                android:layout_width="104.00dp"-->
        <!--                android:layout_height="104.00dp"-->
        <!--                android:background="@drawable/background_image"-->
        <!--                android:scaleType="centerCrop"-->
        <!--                app:riv_oval="true" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/textAddImage"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_gravity="center"-->
        <!--                android:text="@string/add_image"-->
        <!--                android:textColor="@color/secondary_text"-->
        <!--                android:textSize="13.00sp"-->
        <!--                />-->
        <!--        </FrameLayout>-->

        <EditText
            android:id="@+id/SignUpName"
            android:layout_width="match_parent"
            android:layout_height="58.50dp"
            android:layout_marginTop="26.00dp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="20.80dp"
            android:paddingEnd="20.80dp"
            android:textColor="@color/primary_text"
            android:textSize="16.90sp"/>

        <EditText
            android:id="@+id/SignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="58.50dp"
            android:layout_marginTop="20.80dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="20.80dp"
            android:paddingEnd="20.80dp"
            android:textColor="@color/primary_text"
            android:textSize="16.90sp"/>

        <EditText
            android:id="@+id/SignUpPass"
            android:layout_width="match_parent"
            android:layout_height="58.50dp"
            android:layout_marginTop="20.80dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20.80dp"
            android:paddingEnd="20.80dp"
            android:textColor="@color/primary_text"
            android:textSize="16.90sp"/>

        <EditText
            android:id="@+id/SignUpCPass"
            android:layout_width="match_parent"
            android:layout_height="58.50dp"
            android:layout_marginTop="20.80dp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20.80dp"
            android:paddingEnd="20.80dp"
            android:textColor="@color/primary_text"
            android:textSize="16.90sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.80dp"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/SignUpBtn"
                android:layout_width="match_parent"
                android:layout_height="65.00dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16.90sp"
                android:textStyle="bold"
                app:cornerRadius="10.40dp" />

            <ProgressBar
                android:id="@+id/SignUpProgressBar"
                android:layout_width="32.50dp"
                android:layout_height="32.50dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13.00dp"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textSize="16.90sp"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>